--- a/BottoniDirezioni.html
+++ b/BottoniDirezioni.html
@@ -32,7 +32,7 @@ margin: 10px;
 
 
 #Alto {
-order: 1; /* Posiziona il Player 1 in alto */
+order: 1; 
 }
 
 
@@ -50,7 +50,7 @@ order: 1; /* Posiziona il Player 1 in alto */
 
 
 #Basso {
-order: 4; /* Posiziona il Player 2 in basso */
+order: 4; 
 margin-top: 70px;
 }
 
